Fixed spacing for paragraph

--- a/assets/css/hdden-forms.css
+++ b/assets/css/hdden-forms.css
@@ -729,7 +729,6 @@ img.seccion2__img.main__logocollection {
   .seccion1__parrafo {
     font-size: 1.6vw;
     margin: 0;
-    transform: translate(-125px, -25px);
   }
 
   .seccion1__imagen {
